# ConnectionPool

./: .gitignore  CMakeLists.txt  mysql.ini
include/: Connection.h  ConnectionPool.h  public.h
src/: Connection.cpp  ConnectionPool.cpp  main.cpp
